--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
   </div>
 
   <footer>
-    <p><strong>Endereço:</strong> Rua Catanduba, Bairro Bosque das Palmeiras, Casa Verde nº 10 - Tagará/RN</p>
+    <p><strong>Endereço:</strong> Rua Catanduba, Bairro Bosque das Palmeiras, Casa Verde nº 10 - Tangará/RN</p>
     <p><strong>Contato:</strong> <a href="https://www.instagram.com/sush.ihouse/" target="_blank" class="insta-link">@sush.ihouse</a></p>
     <p><strong>Horário de funcionamento:</strong> Domingo á Terça - 18h às 23h | Quinta e Sexta - 18h às 23h</p>
     <p><strong>Prazo médio de entrega:</strong> 40 a 60 minutos</p>
