--- a/index.html
+++ b/index.html
@@ -292,7 +292,8 @@
   { categoria: "Sobremesas & Bebidas", itens: [
     { nome: "Hot de Banana com Chocolate ou Doce de Leite (4 un.)", preco: 15, imagem: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQw16Xi0wnT-XPTwKxscIxRe9vRtTPCD0zhYlkZGKpgPsWdtwRu" },
     { nome: "Fanta Uva / Fanta Laranja / Guaraná", preco: 5, imagem: "https://m.magazineluiza.com.br/a-static/420x420/latinha-fanta-uva/restaurantedohenrique/7f94b530677711ee97af4201ac185056/e00cfd64d13e36eb11c3622331b34e8f.jpeg" },
-    { nome: "Coca-Cola / Coca-Cola Zero / Guaraná , 1 Litro ", preco: 7, imagem: "https://www.clubeextra.com.br/img/uploads/1/592/19755592.png" }
+     { nome: "Coca-Cola / Coca-Cola Zero Latinha ", preco: 7, imagem: "https://http2.mlstatic.com/D_NQ_NP_924144-MLB69285592336_052023-O.webp" },
+    { nome: "Coca-Cola / Coca-Cola Zero / Guaraná , 1 Litro ", preco: 8, imagem: "https://www.clubeextra.com.br/img/uploads/1/592/19755592.png" }
   ]}
 ];
 
